Fix collapse/expand tree & landing page interactions

--- a/app/landing/landing.css
+++ b/app/landing/landing.css
@@ -1,5 +1,12 @@
+.wrapper-collapsed .landing {
+    margin-left: 250px;
+}
+
 .landing {
     background: white;
+    position: fixed;
+    height: 100%;
+    width: calc(100% - 250px);
 }
 
 .landing video {
